--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -4,215 +4,215 @@
  */
 
 @font-face {
-  font-family: 'Neue Montreal';
+  font-family: "Neue Montreal";
   font-weight: 1 999;
-  src: url('https://drewhost.s3.amazonaws.com/PPNeueMontrealVariable.ttf') format('truetype');
+  src: url("https://drewhost.s3.amazonaws.com/PPNeueMontrealVariable.ttf") format("truetype");
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-italic-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin-ext.woff2) format("woff2");
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Red Hat Mono';
+  font-family: "Red Hat Mono";
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format('woff2');
+  src: url(/fonts/redhatmono-v10-300-normal-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
@@ -222,13 +222,13 @@
  * -------------------------------------------------------------------------- */
 
 :root {
-  --vp-font-family-base: 'Neue Montreal', -apple-system, 'system-ui', 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
-  --vp-font-family-mono: 'Red Hat Mono', ui-monospace, monospace;
+  --vp-font-family-base: "Neue Montreal", -apple-system, "system-ui", "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  --vp-font-family-mono: "Red Hat Mono", ui-monospace, monospace;
 }
 
 em,
 i {
-  font-variation-settings: 'ital' 900;
+  font-variation-settings: "ital" 900;
   font-style: normal;
 }
 
@@ -281,7 +281,7 @@ i {
   --vp-c-brand-1: oklch(60% 0.216564 269);
   --vp-c-brand-2: oklch(50% 0.216583 268);
   --vp-c-brand-3: oklch(60% 0.216564 269);
-  --vp-c-brand-soft: oklch(60% 0.216564 269/0.2);
+  --vp-c-brand-soft: oklch(60% 0.216564 269/0.15);
 
   --vp-code-color: var(--vp-c-text-1);
 
@@ -348,7 +348,11 @@ i {
   --vp-custom-block-tip-border: transparent;
   --vp-custom-block-tip-text: var(--vp-c-text-1);
   --vp-custom-block-tip-bg: var(--vp-c-brand-soft);
-  --vp-custom-block-tip-code-bg: var(--vp-c-brand-soft);
+  --vp-custom-block-tip-code-bg: oklch(60% 0.216564 269 / 0.08);
+}
+
+.custom-block.tip code {
+  color: var(--vp-c-text-1);
 }
 
 /**
@@ -364,14 +368,14 @@ i {
  * -------------------------------------------------------------------------- */
 
 .VPHome {
-  background-image: url('/images/home-bg.png');
+  background-image: url("/images/home-bg.png");
   background-repeat: no-repeat;
   background-position: center 4rem;
   background-size: 200% auto;
 }
 
 .dark .VPHome {
-  background-image: url('/images/home-bg-dark.png');
+  background-image: url("/images/home-bg-dark.png");
 }
 
 @media (min-width: 800px) {
